Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-3638

incompatibility with new boost version 1.48

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Minor
    • Resolution: Fixed
    • 0.14
    • 0.15
    • C++ Broker, C++ Client
    • Fedora rawhide

    Description

      qpid/log/Logger.cpp:26:43: fatal error: boost/pool/detail/singleton.hpp: No such file or directory

      Looks like the code under boost/pool has been re-organized in version 1.48, and that file no longer exists.

      Attachments

        Activity

          People

            tross Ted Ross
            nsantos Nuno Santos
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: