QPID-3638 - Fixed boost usage problem.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1243676 13f79535-47bb-0310-9956-ffa450edef68